# YTStreamer

./: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  Cargo.toml  LICENSE  README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json  install-env.sh
app/: GlobalContexts.tsx  GlobalNav.tsx  Theme.tsx  Window.tsx  layout.tsx  page.tsx
app/hooks/: layout.tsx
app/hooks/[categorySlug]/: layout.tsx  page.tsx
app/hooks/[categorySlug]/[subCategorySlug]/: page.tsx
app/layouts/[categorySlug]/: layout.tsx
app/profiles/: ProfilesNav.tsx  layout.tsx  page.tsx
app/route-groups/(main)/: layout.tsx
app/route-groups/(marketing)/: layout.tsx
app/route-groups/(shop)/: layout.tsx
app/route-groups/(shop)/[categorySlug]/: layout.tsx  page.tsx
app/route-groups/(shop)/[categorySlug]/[subCategorySlug]/: page.tsx
app/settings/: CategoryNav.tsx  layout.tsx  page.tsx
app/settings/[categorySlug]/: page.tsx
lib/: demos.ts  getCategories.ts  layouts.ts  options.ts  outputTemplate.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  lib.rs  proc.rs  yt_dlp.rs
ui/: AddressBar.tsx  Formats.tsx  HomePage.tsx  ToggleButton.tsx  Window.tsx
ui/homepage/: AddressBar.tsx  Contexts.tsx  DownProfile.tsx  HomePage.tsx  ProgressBar.tsx
ui/profiles/: Contexts.tsx  InputBox.tsx  Profiles.tsx  Selector.tsx  Slider.tsx  ToggleButton.tsx
ui/settings/: General.tsx  Settings.tsx
wrapper/: CSRWrapper.tsx
