[package]
name = "ytstreamer"
version = "0.1.1"
description = "A cross platform frontend for yt-dlp, with additional features."
authors = ["wanyoou <thirtyww@outlook.com>"]
keywords = ["ytstreamer", "tauri", "yt-dlp"]
license = "BSD-3-Clause"
readme = "README.md"
build = "build.rs"
repository = "https://github.com/wanyoou/YTStreamer"
edition = "2021"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2.0.0-alpha.2", features = [] }

[dependencies]
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
tauri = { version = "^2.0.0-alpha.4", features = ["dialog-all", "path-all"] }
futures = "^0.3.27"

[features]
default = []
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
